modified: command 명령어 수정

--- a/getHub/netlify.toml
+++ b/getHub/netlify.toml
@@ -1,6 +1,6 @@
 # site-1 netlify.toml
 [build]
-  command = "gatsby build"
+  command = "CI= npm run build"
   functions = "functions"
   publish = "public"
 
